src/pages/Dashboard/Mentors/EditMentor/editmentor.module.css
.mentorsCardEditBtn {
  border-radius: 3px;
  background-color: #2492eb !important;
  color: white;
  padding: 8px 40px;
}
.mentorsCardEditBtn:hover {
  border-radius: 3px;
  background-color: #0e8df5 !important;
  color: white;
  padding: 8px 40px;
}
.mentorDeleteBtn {
  border-radius: 3px;
  padding: 8px 40px;
  background-color: white !important;
  color: white;
  border: 1px solid #d7263d;
  background-color: #d7263d !important;
}
.mentorDeleteBtn:hover {
  border-radius: 3px;
  padding: 8px 40px;
  background-color: d7263d !important;
  color: white !important;
  border: 1px solid #d7263d;
  background-color: #d7263d !important;
  margin-left: 24px;
}

